--- a/src/components/equipmentlist/NartyList.module.css
+++ b/src/components/equipmentlist/NartyList.module.css
@@ -1,9 +1,26 @@
-.NartyListHeader {
+.NartyTableHeader  {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-gap: 20px;
+    grid-template-columns: 130px 1fr 120px 400px 1fr;
+    grid-gap: 90px;
     grid-temple-rows: minmax(100px, auto);
-
+    font-weight: bolder;
     border: 2px solid var(--border-color);
-    padding: 10px;
+    padding: 4px 0 4px 0;
+
+
+
+}
+
+
+.NartyTableRow  div {
+    border: 1px solid var(--border-color);
+    padding: 4px 0 4px 0;
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.TableRow div button {
+    width: 90%;
 }
