--- a/src/components/equipmentlist/ButyList.module.css
+++ b/src/components/equipmentlist/ButyList.module.css
@@ -1,31 +1,22 @@
-.ButyTableHeader  {
-    display: grid;
-    grid-template-columns: 100px 1fr 100px 400px 1fr;
-    grid-gap: 90px;
-    grid-temple-rows: minmax(100px, auto);
-    font-weight: bolder;
-    border: 2px solid var(--border-color);
-    padding: 4px 0 4px 0;
-}
 
-
-.ButyTableRow  div {
+.ButyTableHeader  div {
     border: 1px solid var(--border-color);
-    padding: 4px 0 4px 0;
+    margin: 5px 51px 5px 20px;
+    padding: 5px 50px 5px 50px;
+    background: var(--nawigacja);
+    color: ghostwhite;
     display: flex;
-    height: 100%;
     justify-content: center;
-    align-items: center;
+}
+.Button{
+    margin: 5px 51px 5px 20px;
 }
 
-.TableRow div button {
-    width: 90%;
+.ButyTableRow div {
+    border: 1px solid var(--border-color);
+    margin: 4px 50px 4px 20px;
+    padding: 5px 50px 5px 50px;
+    display: flex;
+    justify-content: center;
 }
-.DodajButy {
-    background-color: lightgray;
-    width: fit-content;
-    padding: 1px 10px 1px 10px;
-    margin-left: 100px;
-    font-size: x-large;
 
-}
