--- a/src/components/equipmentlist/KompletList.module.css
+++ b/src/components/equipmentlist/KompletList.module.css
@@ -1,23 +1,19 @@
-.TableHeader  {
-    display: grid;
-    grid-template-columns: 130px 1fr 600px
-;
-    grid-gap: 90px;
-    grid-temple-rows: minmax(100px, auto);
-    font-weight: bolder;
-    border: 2px solid var(--border-color);
-    padding: 4px 0 4px 0;
 
-}
-
-
-.TableRow  div {
+.TableHeader  div {
     border: 1px solid var(--border-color);
-    padding: 4px 0 4px 0;
+    margin: 5px 50px 5px 20px;
+    padding: 5px 40px 5px 40px;
+    background: var(--nawigacja);
+    color: ghostwhite;
     display: flex;
-    height: 100%;
     justify-content: center;
-    align-items: center;
+}
+.TableRow div {
+    border: 1px solid var(--border-color);
+    margin: 5px 50px 5px 20px;
+    padding: 5px 40px 5px 40px;
+    display: flex;
+    justify-content: center;
 }
 
 
