--- a/src/components/equipmentlist/NartyList.module.css
+++ b/src/components/equipmentlist/NartyList.module.css
@@ -1,33 +1,23 @@
-.NartyTableHeader  {
-    display: grid;
-    grid-template-columns: 130px 1fr 120px 400px 1fr;
-    grid-gap: 90px;
-    grid-temple-rows: minmax(100px, auto);
-    font-weight: bolder;
-    border: 2px solid var(--border-color);
-    padding: 4px 0 4px 0;
 
-}
-
-
-.NartyTableRow  div {
+.NartyTableHeader  div {
     border: 1px solid var(--border-color);
-    padding: 4px 0 4px 0;
+    margin: 5px 51px 5px 20px;
+    padding: 5px 50px 5px 50px;
+    background: var(--nawigacja);
+    color: ghostwhite;
     display: flex;
-    height: 100%;
     justify-content: center;
-    align-items: center;
+}
+.Button{
+    margin: 5px 51px 5px 20px;
+
 }
 
-.TableRow div button {
-    width: 90%;
-}
-.DodajNarty{
-    background-color: lightgray;
-    border-style: wave;
-    height: 70%;
-    width: fit-content;
-    margin-left: 150px;
-    font-size: x-large;
+.NartyTableRow div {
+    border: 1px solid var(--border-color);
+    margin: 4px 50px 4px 20px;
+    padding: 5px 50px 5px 50px;
+    display: flex;
+    justify-content: center;
 
 }
