--- a/src/components/form/FormNarty.module.css
+++ b/src/components/form/FormNarty.module.css
@@ -1,15 +1,11 @@
-.FormNarty{
-    background-color: var(--body);
-    width: calc(91vw - 8px);
-    min-height: calc(100vh - 78px);
-    margin: 9px auto auto;
-    font-size: large;
+.Form  div {
+    border: 1px solid var(--border-color);
+    padding: 20px 20px 20px 20px;
+    background: var(--nawigacja);
+    color: ghostwhite;
+    display: flex;
+    justify-content: center;
 }
-
-.Confirm{
-    background: lightgray;
-    border-style: solid;
-    margin-left: 400px;
-    margin-top: 50px;
-    font-size: x-large;
+.Button{
+    margin: 6px 200px 0px 200px;
 }
