--- a/src/components/formKlient/KlientForm.module.css
+++ b/src/components/formKlient/KlientForm.module.css
@@ -1,15 +1,11 @@
-.KlientForm{
-    background-color: var(--body);
-    width: calc(91vw - 8px);
-    min-height: calc(100vh - 78px);
-    margin: 9px auto auto;
-
+.Form  div {
+    border: 1px solid var(--border-color);
+    padding: 20px 20px 20px 20px;
+    background: var(--nawigacja);
+    color: ghostwhite;
+    display: flex;
+    justify-content: center;
 }
-.FormConfirm {
-    background: lightgray;
-    border-style: solid;
-    margin: 50px;
-    font-size: x-large;
-
-
+.Button{
+    margin: 0px 200px 0px 200px;
 }
