--- a/src/components/formKlient/KlientList.module.css
+++ b/src/components/formKlient/KlientList.module.css
@@ -1,7 +1,16 @@
-.FormRow {
-    background-color: lightgray;
-    border-style: groove;
-    font-size: large;
-    margin: auto 100px auto 100px;
-    padding: 20px;
+
+.TableHeader  div {
+    border: 1px groove var(--border-color);
+    padding: 10px 30px 10px 30px;
+    background: var(--nawigacja);
+    color: ghostwhite;
+    display: flex;
+    justify-content: center;
+}
+
+.TableRow div {
+    border: 1px groove  var(--border-color);
+    padding: 5px 30px 5px 30px;
+    display: flex;
+    justify-content: center;
 }
